--- a/src/index.css
+++ b/src/index.css
@@ -321,9 +321,16 @@ p {
 
 /* Zino's CSS additions */
 .map {
-  height: 300px;
-  width: 300px;
+  height: 25vh;
+  width: 25vw;
+  margin: auto;
   display: inline-block;
+  border-radius: var(--radius);
+}
+
+.container--map {
+  height: 100vh;
+  width: 100vw;
 }
 
 .item--house {
@@ -331,7 +338,9 @@ p {
   flex-direction: column;
   background: var(--clr-white);
   max-width: var(--fixed-width);
+  border: 2px solid grey;
   margin: 0 auto;
+  margin-right: 2rem;
   margin-bottom: 4rem;
   padding: 1rem 2rem;
   border-radius: var(--radius);
@@ -340,4 +349,5 @@ p {
 .list--house {
   overflow-x: auto;
   overflow-y: hidden;
+  white-space: nowrap;
 }
