--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ body {
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
+  padding-top: 120px; 
 }
 ul {
   list-style-type: none;
@@ -253,71 +254,6 @@ p {
 .nav-links a {
   color: var(--clr-grey-5);
 }
-.users {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
-  margin: 3rem auto;
-}
-.users li {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  background: var(--clr-white);
-  padding: 1rem 2rem;
-  border-radius: var(--radius);
-  text-align: left;
-}
-.users img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 1rem;
-}
-.users h4 {
-  margin-bottom: 0.15rem;
-}
-.users a {
-  color: var(--clr-grey-5);
-  text-transform: capitalize;
-}
-
-.products {
-  margin: 4rem 0;
-  display: grid;
-  gap: 2rem;
-}
-@media screen and (min-width: 576px) {
-  .products {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  }
-}
-.product {
-  background: var(--clr-white);
-  border-radius: var(--radius);
-}
-.product img {
-  border-top-left-radius: var(--radius);
-  border-top-right-radius: var(--radius);
-
-  width: 100%;
-  height: 15rem;
-  object-fit: cover;
-}
-.product h4 {
-  margin-top: 1rem;
-}
-
-.product button {
-  margin-bottom: 1rem;
-  background: var(--clr-primary-5);
-  border-radius: var(--radius);
-  border-color: transparent;
-  color: var(--clr-white);
-  padding: 0.25rem 0.5rem;
-  text-transform: capitalize;
-  cursor: pointer;
-}
 
 /* Zino's CSS additions */
 .map {
@@ -329,10 +265,6 @@ p {
   overflow: hidden;
 }
 
-.container--map {
-  height: 100vh;
-  width: 100vw;
-}
 
 .item--house {
   display: inline-block;
@@ -387,4 +319,34 @@ p {
 
 .category--input{
   justify-content: space-between;
+}
+
+header {
+  border-bottom: 5px solid black;
+  padding : 10px 20px;
+  width: 100%; 
+  height: 120px;  
+  top: 0; 
+  left: 0; 
+  position: fixed; 
+  z-index: 1;
+}
+
+header, a{
+  color: black; 
+}
+
+nav, h1 {
+  display: inline-block; 
+  position: relative;  
+}
+
+nav a{
+  margin-left: 10px;  
+}
+
+nav{
+  float: right; 
+  line-height: 80px;
+  font-size: 1.4em;
 }
