--- a/src/index.css
+++ b/src/index.css
@@ -61,8 +61,8 @@ Global Styles
 */
 
 *,
-::after,
-::before {
+*:after,
+*:before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -70,7 +70,7 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: var(--clr-grey-10);
+  background: var(--clr-white);
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
@@ -173,7 +173,8 @@ p {
 .item {
   background: var(--clr-white);
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
   max-width: var(--fixed-width);
   margin: 2rem auto;
   align-items: center;
@@ -216,9 +217,11 @@ p {
   background: var(--clr-white);
   max-width: var(--fixed-width);
   margin: 0 auto;
+  margin-top: 4rem; 
   margin-bottom: 4rem;
   padding: 1rem 2rem;
   border-radius: var(--radius);
+  box-shadow: 0px 0px 5px var(--clr-grey-1);
 }
 .form input {
   background: var(--clr-grey-10);
@@ -322,7 +325,7 @@ p {
 }
 
 header {
-  border-bottom: 5px solid black;
+  border-bottom: 3px solid rgba(0,0,0.4);
   padding : 10px 20px;
   width: 100%; 
   height: 120px;  
@@ -338,15 +341,76 @@ header, a{
 
 nav, h1 {
   display: inline-block; 
-  position: relative;  
+  position: relative; 
 }
 
 nav a{
-  margin-left: 10px;  
+  margin: 15px;  
 }
 
 nav{
   float: right; 
   line-height: 80px;
   font-size: 1.4em;
+}
+
+.btn--nav { 
+  position: relative;
+  padding: 1rem 1rem; 
+  letter-spacing: 0.1rem;
+  transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1)
+}
+
+.btn--nav::before,
+.btn--nav::after {
+  content: "";
+  position: absolute;
+  transition: inherit;
+  z-index: -1;
+}
+
+.btn--nav:hover {
+  color: #fff;
+  transition-delay: 0.5s;
+}
+
+.btn--nav:hover:before {
+  transition-delay: 0s;
+}
+
+.btn--nav:hover:after {
+  background: #000;
+  transition-delay: 0.35s;
+}
+
+/* 
+from top */
+
+.from-top::before,
+.from-top::after {
+  left: 0;
+  height: 0;
+  width: 100%;
+}
+
+.from-top::before {
+  /* bottom: 0; */
+  border: 1px solid white;
+  border-top: 0;
+  border-bottom: 0;
+}
+
+.from-top::after {
+  top: 0;
+  height: 0;
+}
+
+.from-top:hover::after,
+.from-top:hover:before {
+  height: 100%;
+}
+
+.container--nav{
+  display: flex; 
+  flex-direction: row;
 }
